--- a/docker/base-image/Dockerfile
+++ b/docker/base-image/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:11.0.15_10-jre-alpine@sha256:d401c4025eb1ead95cf2ca83cd5155bff8756527a4f4e9820570900e835f5ba4
+FROM eclipse-temurin:11.0.23_9-jre-alpine
 
 LABEL maintainer="Flowable <info@flowable.org>"
 RUN apk add --no-cache ttf-dejavu && rm -rf /var/cache/apk/*
