--- a/modules/flowable-ui/flowable-ui-app/pom.xml
+++ b/modules/flowable-ui/flowable-ui-app/pom.xml
@@ -344,10 +344,10 @@
                         <artifactId>jib-maven-plugin</artifactId>
                         <configuration>
                             <from>
-                                <image>flowable/flowable-jre:11.0.15</image>
+                                <image>flowable-jre:11.0.23</image>
                             </from>
                             <to>
-                                <image>flowable/flowable-ui:${project.version}</image>
+                                <image>flowable-ui:${project.version}</image>
                                 <auth>
                                     <username>${docker.publisher.user}</username>
                                     <password>${docker.publisher.password}</password>
